--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   firebase_core: ^1.18.0
   firebase_auth: ^3.3.20
   cloud_firestore: ^3.1.18
-  modal_progress_hud: ^0.1.3
+#  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
