--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^1.18.0
   firebase_auth: ^3.3.20
   cloud_firestore: ^3.1.18
+  cached_network_image: ^3.2.0
+  shimmer: ^2.0.0
 #  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
